@@ -1,3 +1,8 @@
+2019-05-14  Akira Kakuto  <kakuto@w32tex.org>
+
+	* texmfmp.c: Support non-ascii file names in special cases
+	implemented in a previous change on 2019-05-08 (Windows only).
+
 2019-05-08  Akira Kakuto  <kakuto@w32tex.org>
 
 	* texmfmp.c: Introduce a new function find_input_file(s)
